--- a/views/Partials/_footer.ejs
+++ b/views/Partials/_footer.ejs
@@ -7,11 +7,11 @@
                         <a href="index.html"><img src="images/version/tech-footer-logo.png" alt="" class="img-fluid"></a>
                         <p>Tech Blog is a technology blog, we sharing marketing, news and gadget articles.</p>
                         <div class="social">
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Google Plus"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" data-toggle="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest"></i></a>
+                            <a href="https://www.facebook.com/latrosoft" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
+                            <a href="https://twitter.com/home?lang=en" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
+                            <a href="https://www.instagram.com/latrosoft/" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram"></i></a>
+                           
+                            <a href="https://in.pinterest.com/latrosoft/_saved/" data-toggle="tooltip" data-placement="bottom" title="Pinterest"><i class="fa fa-pinterest"></i></a>
                         </div>
 
                         <hr class="invis">
@@ -31,10 +31,10 @@
                     <h2 class="widget-title">Popular Categories</h2>
                     <div class="link-widget">
                         <ul>
-                            <li><a href="#">Marketing <span>(21)</span></a></li>
-                            <li><a href="#">SEO Service <span>(15)</span></a></li>
-                            <li><a href="#">Digital Agency <span>(31)</span></a></li>
-                            <li><a href="#">Make Money <span>(22)</span></a></li>
+                            <li><a href="#">Hacking </a></li>
+                            <li><a href="#">Technology</a></li>
+                            <li><a href="#">Science</a></li>
+                            <li><a href="#"></a></li>
                             <li><a href="#">Blogging <span>(66)</span></a></li>
                         </ul>
                     </div><!-- end link-widget -->
@@ -46,11 +46,10 @@
                     <h2 class="widget-title">Copyrights</h2>
                     <div class="link-widget">
                         <ul>
-                            <li><a href="#">About us</a></li>
-                            <li><a href="#">Advertising</a></li>
-                            <li><a href="#">Write for us</a></li>
-                            <li><a href="#">Trademark</a></li>
-                            <li><a href="#">License & Help</a></li>
+                            <li><a href="https://latrosoft.in/">About us</a></li>
+                            <li><a href="https://latrosoft.in/carrer">Write for us</a></li>
+                            <li><a href="https://latrosoft.in/">Trademark</a></li>
+                            <li><a href="https://latrosoft.in/">License & Help</a></li>
                         </ul>
                     </div><!-- end link-widget -->
                 </div><!-- end widget -->
@@ -60,7 +59,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
-                <div class="copyright">&copy; Tech Blog. Design: <a href="https://latrosoft.in/">Latrosoft,Inc</a>.</div>
+                <div class="copyright">&copy; Powered By <a href="https://latrosoft.in/">Latrosoft,Inc.</a>.</div>
             </div>
         </div>
     </div><!-- end container -->
