--- a/views/Partials/_navbar.ejs
+++ b/views/Partials/_navbar.ejs
@@ -20,8 +20,8 @@
                                             <button class="tablinks active" onclick="openCategory(event, 'cat01')">Science</button>
                                             <button class="tablinks" onclick="openCategory(event, 'cat02')">Technology</button>
                                             
-                                            <button class="tablinks" onclick="openCategory(event, 'cat04')">General</button>
-                                            <button class="tablinks" onclick="openCategory(event, 'cat05')">Hacking</button>
+                                            <button class="tablinks" onclick="openCategory(event, 'cat04')">Reviews</button>
+                                            <button class="tablinks" onclick="openCategory(event, 'cat05')">Security</button>
                                         </div>
 
                                         <div class="tab-details clearfix">
@@ -33,7 +33,7 @@
                                                         <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                                                             <div class="blog-box">
                                                                 <div class="post-media">
-                                                                    <a href="/single" title="">
+                                                                    <a href="/single?id=<%=tagValue[3][i].id%>" title="">
                                                                         <img src="<%=tagValue[3][i].banner%>" alt="" class="img-fluid">
                                                                         <div class="hovereffect">
                                                                         </div><!-- end hover -->
@@ -41,7 +41,7 @@
                                                                     </a>
                                                                 </div><!-- end media -->
                                                                 <div class="blog-meta">
-                                                                    <h4><a href="/single" title=""><%=tagValue[3][i].title%></a></h4>
+                                                                    <h4><a href="/single?id=<%=tagValue[3][i].id%>" title=""><%=tagValue[3][i].title%></a></h4>
                                                                 </div><!-- end meta -->
                                                             </div><!-- end blog-box -->
                                                         </div>
@@ -61,7 +61,7 @@
                                                         <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                                                             <div class="blog-box">
                                                                 <div class="post-media">
-                                                                    <a href="/single" title="">
+                                                                    <a href="/single?id=<%=tagValue[0][i].id%>" title="">
                                                                         <img src="<%=tagValue[0][i].banner%>" alt="" class="img-fluid">
                                                                         <div class="hovereffect">
                                                                         </div><!-- end hover -->
@@ -69,7 +69,7 @@
                                                                     </a>
                                                                 </div><!-- end media -->
                                                                 <div class="blog-meta">
-                                                                    <h4><a href="/single" title=""><%=tagValue[0][i].title%></a></h4>
+                                                                    <h4><a href="/single?id=<%=tagValue[0][i].id%>" title=""><%=tagValue[0][i].title%></a></h4>
                                                                 </div><!-- end meta -->
                                                             </div><!-- end blog-box -->
                                                         </div>
@@ -86,7 +86,7 @@
                                                         <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                                                             <div class="blog-box">
                                                                 <div class="post-media">
-                                                                    <a href="/single" title="">
+                                                                    <a href="/single?id=<%=tagValue[2][i].id%>" title="">
                                                                         <img src="<%=tagValue[2][i].banner%>" alt="" class="img-fluid">
                                                                         <div class="hovereffect">
                                                                         </div><!-- end hover -->
@@ -94,7 +94,7 @@
                                                                     </a>
                                                                 </div><!-- end media -->
                                                                 <div class="blog-meta">
-                                                                    <h4><a href="/single" title=""><%=tagValue[2][i].title%></a></h4>
+                                                                    <h4><a href="/single?id=<%=tagValue[2][i].id%>" title=""><%=tagValue[2][i].title%></a></h4>
                                                                 </div><!-- end meta -->
                                                             </div><!-- end blog-box -->
                                                         </div>
@@ -108,7 +108,7 @@
                                                         <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                                                             <div class="blog-box">
                                                                 <div class="post-media">
-                                                                    <a href="/single" title="">
+                                                                    <a href="/single?id=<%=tagValue[1][i].id%>" title="">
                                                                         <img src="<%=tagValue[1][i].banner%>" alt="" class="img-fluid">
                                                                         <div class="hovereffect">
                                                                         </div><!-- end hover -->
@@ -116,7 +116,7 @@
                                                                     </a>
                                                                 </div><!-- end media -->
                                                                 <div class="blog-meta">
-                                                                    <h4><a href="/single" title=""><%=tagValue[1][i].title%></a></h4>
+                                                                    <h4><a href="/single?id=<%=tagValue[1][i].id%>" title=""><%=tagValue[1][i].title%></a></h4>
                                                                 </div><!-- end meta -->
                                                             </div><!-- end blog-box -->
                                                         </div>
@@ -130,9 +130,9 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/gadget">Gadgets</a>
-                    </li>                   
+                    </li>                    -->
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="/Video">Videos</a>
                     </li> -->
