--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,6 +44,8 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+  
+
 </head>
 <body>
 
@@ -61,7 +63,7 @@
                                 <div class="shadow-desc">
                                     <div class="blog-meta">
                                         <span class="bg-orange"><a href="/<%=(data[0].tag).toLowerCase()%>" title=""><%=data[0].tag%></a></span>
-                                        <h4><a href="/single?id=<%=data[1].id%>" title=""><%=data[0].title%></a></h4>
+                                        <h4><a href="/single?id=<%=data[0].id%>" title=""><%=data[0].title%></a></h4>
                                         <small><a href="/single?id=<%=data[0].id%>" title=""><%=data[0].date%></a></small>
                                         <small><a href="/author" title="">by <%=data[0].by%></a></small>
                                     </div><!-- end meta -->
@@ -114,7 +116,7 @@
                                 <h4 class="pull-left">Recent News <a href="#"><i class="fa fa-rss"></i></a></h4>
                             </div><!-- end blog-top -->
 
-                            <% for(let i =0; i<3;i++){%>
+                            <% for(let i =3; i<6;i++){%>
                             <section class="blog-list clearfix">
                                 <div class="blog-box row">
                                     <div class="col-md-4">
@@ -153,7 +155,7 @@
                                 </div><!-- end row -->
 
                                 <hr class="invis">
-                                <% for(let i =3; i<8;i++){%>
+                                <% for(let i =6; i<11;i++){%>
                                     <section class="blog-list clearfix">
                                         <div class="blog-box row">
                                             <div class="col-md-4">
@@ -190,7 +192,7 @@
 
                         <hr class="invis">
 
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-md-12">
                                 <nav aria-label="Page navigation">
                                     <ul class="pagination justify-content-start">
@@ -203,7 +205,7 @@
                                     </ul>
                                 </nav>
                             </div><!-- end col -->
-                        </div><!-- end row -->
+                        <!-- </div>end row --> -->
                     </div><!-- end col -->
 
                     <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
@@ -352,30 +354,25 @@
 
                                 <div class="row text-center">
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                                        <a href="#" class="social-button facebook-button">
+                                        <a href="https://www.facebook.com/latrosoft" class="social-button facebook-button">
                                             <i class="fa fa-facebook"></i>
-                                            <p>27k</p>
+                                            
                                         </a>
                                     </div>
 
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                                        <a href="#" class="social-button twitter-button">
+                                        <a href="https://twitter.com/Latrosoft" class="social-button twitter-button">
                                             <i class="fa fa-twitter"></i>
-                                            <p>98k</p>
+                                            
                                         </a>
                                     </div>
 
-                                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                                        <a href="#" class="social-button google-button">
-                                            <i class="fa fa-google-plus"></i>
-                                            <p>17k</p>
-                                        </a>
-                                    </div>
+                                
 
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                                        <a href="#" class="social-button youtube-button">
+                                        <a href="https://www.youtube.com/channel/UCK491hLt4cMof7NlTmHJeRg" class="social-button youtube-button">
                                             <i class="fa fa-youtube"></i>
-                                            <p>22k</p>
+                                            
                                         </a>
                                     </div>
                                 </div>
