--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -424,35 +424,29 @@
 
                                 <div class="row text-center">
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                                        <a href="#" class="social-button facebook-button">
+                                        <a href="https://www.facebook.com/latrosoft" class="social-button facebook-button">
                                             <i class="fa fa-facebook"></i>
-                                            <p>27k</p>
+                                            
                                         </a>
                                     </div>
 
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                                        <a href="#" class="social-button twitter-button">
+                                        <a href="https://twitter.com/Latrosoft" class="social-button twitter-button">
                                             <i class="fa fa-twitter"></i>
-                                            <p>98k</p>
+                                            
                                         </a>
                                     </div>
 
-                                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                                        <a href="#" class="social-button google-button">
-                                            <i class="fa fa-google-plus"></i>
-                                            <p>17k</p>
-                                        </a>
-                                    </div>
+                                
 
                                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-                                        <a href="#" class="social-button youtube-button">
+                                        <a href="https://www.youtube.com/channel/UCK491hLt4cMof7NlTmHJeRg" class="social-button youtube-button">
                                             <i class="fa fa-youtube"></i>
-                                            <p>22k</p>
+                                            
                                         </a>
                                     </div>
                                 </div>
                             </div><!-- end widget -->
-
                             <div class="widget">
                                 <div class="banner-spot clearfix">
                                     <div class="banner-img">
