--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -89,7 +89,7 @@
 
                             <div class="blog-content">
                      
-                                <div class="pp">
+                                <div id="ls-firebase">
                                         <%-data['para']%>
 
                                 </div><!-- end pp -->
@@ -387,7 +387,11 @@
         
          var url=window.location.href;
          document.getElementById("facebook-share-link").setAttribute("href","https://www.facebook.com/sharer.php?u="+ url)
+        $(document).load(()=>{
+            $('#ls-firebase  img').addClass('img-fluid');
+        })
         
+      
      </script>
 </body>
 </html>
