--- a/views/tech-single.ejs
+++ b/views/tech-single.ejs
@@ -197,7 +197,7 @@
                                     <div class="col-lg-6">
                                         <div class="blog-box">
                                             <div class="post-media">
-                                                <a href="/single" title="">
+                                                <a href="/single?id=<%=blog[4].id%>" title="">
                                                     <img src="<%=blog[4].banner%>" alt="" class="img-fluid">
                                                     <div class="hovereffect">
                                                         <span class=""></span>
@@ -205,7 +205,7 @@
                                                 </a>
                                             </div><!-- end media -->
                                             <div class="blog-meta">
-                                                <h4><a href="/single" title=""><%=blog[4].title%></a></h4>
+                                                <h4><a href="/single?id=<%=blog[4].id%>" title=""><%=blog[4].title%></a></h4>
                                                 <small><p><%=blog[4].tag%></p></small>
                                                 <small><p><%=blog[4].date.toDate().toString().slice(0,24)%></p></small>
                                             </div><!-- end meta -->
@@ -215,7 +215,7 @@
                                    <div class="col-lg-6">
                                         <div class="blog-box">
                                             <div class="post-media">
-                                                <a href="/single" title="">
+                                                <a href="/single?id=<%=blog[5].id%>" title="">
                                                     <img src="<%=blog[5].banner%>" alt="" class="img-fluid">
                                                     <div class="hovereffect">
                                                         <span class=""></span>
@@ -223,7 +223,7 @@
                                                 </a>
                                             </div><!-- end media -->
                                             <div class="blog-meta">
-                                                <h4><a href="/single" title=""><%=blog[5].title%></a></h4>
+                                                <h4><a href="/single?id=<%=blog[5].id%>" title=""><%=blog[5].title%></a></h4>
                                                 <small><p><%=blog[5].tag%></p></small>
                                                 <small><p><%=blog[5].date.toDate().toString().slice(0,24)%></p></small>
                                             </div><!-- end meta -->
